--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "next": "16.1.6",
