--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "remark-gfm": "^4.0.1",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
