fix : i add projects

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -37,8 +37,7 @@
     "slug": "food-tracker",
     "title": "Food Tracker",
     "category": "FULL-STACK",
-    "description": "Food Management is a user-friendly web application designed to help individuals track and organize their food items efficiently. The platform allows users to monitor expiry dates, quantities, and categories of their groceries, making it easier to manage their pantry and reduce food waste. With a simple and intuitive interface, the app aims to make food organization practical, convenient, and enjoyable."
-,
+    "description": "Food Management is a user-friendly web application designed to help individuals track and organize their food items efficiently. The platform allows users to monitor expiry dates, quantities, and categories of their groceries, making it easier to manage their pantry and reduce food waste. With a simple and intuitive interface, the app aims to make food organization practical, convenient, and enjoyable.",
     "image": "/assets/images/projects/food.png",
     "screenshot1": "/assets/images/projects/food1.png",
     "screenshot2": "/assets/images/projects/food2.png",
@@ -138,11 +137,11 @@
     "slug": "active-arena",
     "title": "Active Arena",
     "category": "FULL-STACK",
-    "description": "Playground management app with real-time synchronization, JWT authentication, and payment integration.",
+    "description": "This is a Playground Management app that helps users easily book, manage, and track playground activities. It provides a seamless experience for scheduling and payments, ensuring smooth and organized management for both users and administrators.",
     "image": "/assets/images/projects/aarena.png",
-    "screenshot1": "/assets/images/projects/aarena.png",
-    "screenshot2": "/assets/images/projects/aarena.png",
-    "screenshot3": "/assets/images/projects/aarena.png",
+    "screenshot1": "/assets/images/projects/aarena1.png",
+    "screenshot2": "/assets/images/projects/aarena2.png",
+    "screenshot3": "/assets/images/projects/aarena3.png",
     "tech": [
       "React",
       "Stripe",
@@ -266,11 +265,11 @@
     "slug": "frontend-developer-portfolio",
     "title": "Frontend Developer Portfolio",
     "category": "FRONTEND",
-    "description": "Personal portfolio website showcasing projects and skills.",
+    "description": "A personal portfolio website designed to showcase my projects, skills, and professional journey, providing visitors with a clear overview of my work and expertise.",
     "image": "/assets/images/projects/port.png",
-    "screenshot1": "/assets/images/projects/port.png",
-    "screenshot2": "/assets/images/projects/port.png",
-    "screenshot3": "/assets/images/projects/port.png",
+    "screenshot1": "/assets/images/projects/port1.png",
+    "screenshot2": "/assets/images/projects/port2.png",
+    "screenshot3": "/assets/images/projects/port3.png",
     "tech": [
       "Next.js",
       "Tailwind CSS",
